--- a/HTML/Project2/index.html
+++ b/HTML/Project2/index.html
@@ -3,26 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tip Calculator</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>To‑Do</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Tip Calculator</h1>
-        <div class="input-group">
-            <label for="billAmount">Bill Amount:</label>
-            <input type="number" id="billAmount" min="0" step="0.01" placeholder="0.00" required>
-        </div>
-        <div class="input-group">
-            <label for="tip">Tip percentage:</label>
-            <input type="number" id="tip" min="0" max="100" value="15" placeholder="15">
-        </div>
-        <button id="calculate">Calculate</button>
-        <div class="result">
-            <label for="total">Total Amount:</label>
-            <span id="total">0.00</span>
-        </div>
-    </div>
+    <main class="page">
+        <section class="todo-app" aria-labelledby="todo-heading">
+            <h1 id="todo-heading">To‑Do List</h1>
+            <form id="todo-form" class="todo-form" aria-label="Add todo">
+                <input type="text" id="todo-input" placeholder="Add a new task" required />
+                <button type="submit" id="todo-add">Add</button>
+            </form>
+            <div class="todo-actions">
+                <button id="export-json" type="button">Export JSON</button>
+                <button id="import-json" type="button">Import JSON</button>
+                <input id="import-file" type="file" accept="application/json" style="display:none" />
+            </div>
+            <ul id="todo-list" class="todo-list" aria-live="polite"></ul>
+            <!-- Machine-readable tasks for AI tools -->
+            <script type="application/ld+json" id="todo-jsonld">[]</script>
+        </section>
+    </main>
+
     <script src="index.js"></script>
 </body>
 </html>
